# MusicPlayer

./: MusicPlayer.py  MusicPlayer.pygame  pyproject.toml
