[tool.poetry]
name = "musicplayer"
version = "0.1.0"
description = ""
authors = ["Andri <andriniaina@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame-menu = "^4.4.8"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
